  - NEW: add population::insertLoci, population::insertLocus, population::appendLoci, 
		population::appendLocus
  - NEW: add genoStruTrait::locusByName, genoStruTrait::lociByName
  - NEW: swig 1.3.32 compatibility
  - NEW: add scripts/loadHapMap.py
  - NEW: add pyTagger operator, which can be used to trace trait values.
  - NEW: update comments, in preparation for the 0.8.0 release


version 0.7.9 - (Rev 885) Apr 3, 2007
  - BUG (build): add solaris support. This OS does not have stdint.h.
  - BUG (build): add support for python 2.5 on 64 bit machines (new Py_ssize_t type for python2.5)
  - NEW: add SaveSolarFrqFile in simuUtil.py
  - NEW: separate SaveQTDT in SaveMerlinDatFile, SaveMerlinMapFile and SaveMerlinPedFile
		SaveQTDT now calls these three functions.
  - NEW: rewrite newPopByIndID and speed up sample generation considerably.
  - NEW: add scripts/simuHWE.py that demonstrate the temorary deviation from HWE in a
		population with unequal male and female allele frequencies, from Yaji Xu.
  - BUG: fix a bug in the calculation of D'
  - NEW: add LD measurement delta^2
  - NEW: add LD_param parameter to have finer control over how LD is calculated
  - NEW: add exphetero_param, Fst_param, alleleFreq_param etc to have better
	    control over the calculation of these statistics.
  - CHG: midValues of LD is replaced by LD_param={'midValues':True}
  - NEW: add association statistics (ChiSq, UC_U, CramerV)
  - BUG: fix passing of relMethod parameter of stat operator
  - CHG: NO_CONVERSION is no longer the default for rpy


version 0.7.8 - (Rev 833) Mar 2, 2007
  - BUG: fix broken user interactive input
  - BUG: fix help feature of tkinter dialog
  - NEW: bundle boost 1.33.1 with source package
  - BUG (build): fix a SConstruct bug with MSVC environment variables
  - NEW: add other LD measurements to simuLDDecay.py
  - NEW: optionally add header to QTDT ped file
  - BUG: fix the combine parameter of SaveQTDT


version 0.7.7 - (Rev 786) Feb 1, 2007